second attempt at fixing broken link issue

--- a/p1.md
+++ b/p1.md
@@ -1,6 +1,6 @@
 # P1: User Research
 
-![](https://kowther/FieldGuide-481/blob/master/wildflower_small.png)
+![](https://kowther.github.io/FieldGuide-481/wildflower_small.png)
 ## Project Idea
 
 A guide to identify, learn and share Alberta’s 1000+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
@@ -22,7 +22,7 @@ _discuss the user research methods you used, provide justification for them_ Lor
 
 ### User Research Method 1: Secondary Research - Customer Reviews Data Mining
 
-![](https://kowther/FieldGuide-481/blob/master/wildflower_apps.png)
+![](https://kowther.github.io/FieldGuide-481/wildflower_apps.png)
 
 _Justification:_ There are a multitude of field guide apps spanning different geographic locations and species currently available. A great way to gather a significant volume of user experiences in a short period of time is to mine the customer reviews for these apps. The anonymity of online reviews give users a chance to voice their specific likes and dislikes in a candid fashion. This provides invaluable information when designing an app with these users in mind. To focus our analysis we chose to gather key features of the apps that users voiced their opinions on.
  
@@ -39,21 +39,21 @@ Images were another major feature. Users prefer multiple, good quality, and aest
 
 ### User Research Method 2: Interview
 
-![](https://kowther/FieldGuide-481/blob/master/interview03.jpg)
+![](https://kowther.github.io/FieldGuide-481/interview03.jpg)
 
 _Interviewees Alyssa and Wesley_
 
-![](https://kowther/FieldGuide-481/blob/master/interview04.jpg)
+![](https://kowther.github.io/FieldGuide-481/interview04.jpg)
 
 _Interviewee Alyssa showing her favourite field guides_
 
-![](https://kowther/FieldGuide-481/blob/master/interview05.jpg)
+![](https://kowther.github.io/FieldGuide-481/interview05.jpg)
 
 _Interviewer Stephanie and interviewee Alyssa_
 
 Raw notes from interview:
-* [Page 1](https://kowther/FieldGuide-481/blob/master/interview01.jpg)
-* [Page 2](https://kowther/FieldGuide-481/blob/master/interview02.jpg)
+* [Page 1](https://kowther.github.io/FieldGuide-481/interview01.jpg)
+* [Page 2](https://kowther.github.io/FieldGuide-481/interview02.jpg)
 
 _Justification_: Since a potential user of our system is interested in wildflowers but might not have a lot of technical knowledge about them, we wanted to gain insight from someone whose experience with plants is mostly recreational. Our main goal for the interview was to find out what tools they use to find information, and what they like or dislike about the resources that currently exist.
  
@@ -71,17 +71,17 @@ Alyssa also noted that guidebooks sometimes use language that is too complex. Wi
  
 ### User Research Method 3: Extreme User Interviews
 
-![](https://kowther/FieldGuide-481/blob/master/6.jpg)
+![](https://kowther.github.io/FieldGuide-481/6.jpg)
 _Entrance to Fish Creek Park, Bebo Grove_
-![](https://kowther/FieldGuide-481/blob/master/5.jpg)
+![](https://kowther.github.io/FieldGuide-481/5.jpg)
 _Wildflower located in Fish Creek Park, Bebo Grove_
-![](https://kowther/FieldGuide-481/blob/master/2.jpg)
+![](https://kowther.github.io/FieldGuide-481/2.jpg)
 _Interviewee Brent getting ready to use the Alberta Wildlife App_
-![](https://kowther/FieldGuide-481/blob/master/1.jpg)
+![](https://kowther.github.io/FieldGuide-481/1.jpg)
 _Interviewee Brent correctly identified the Buffalo Bean Wildflower in Fish Creek Park_
-![](https://kowther/FieldGuide-481/blob/master/3.jpg)
+![](https://kowther.github.io/FieldGuide-481/3.jpg)
 _Interviewee Lorraine getting ready to use the Alberta Wildlife App_
-![](https://kowther/FieldGuide-481/blob/master/7.jpg)
+![](https://kowther.github.io/FieldGuide-481/7.jpg)
 _Interviewee Lorraine correctly identified the Canadian Bunchberry. (This was completed indoors as there was a rain storm the day we did the interview. An image of the Canadian Bunchberry that is located in Fish Creek Park was printed and used to identify from.)_
 
 _Justification:_ One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
