Updated users and stakeholders

--- a/p1.md
+++ b/p1.md
@@ -15,19 +15,19 @@ Take this app out on an evening stroll in a nearby field or on a hike in one of 
 ## Stakeholders and Users
 
 Users
-* _Children_: This user is really enjoying learning about plants in science class at school. They want to use the app on field trips (or while at the park with their families) to learn the names of plants and cool facts about them.
+* _Children_: This user is really enjoying learning about plants in science class at school. They want to be able to identify and learn cool facts about plants while on field trips or at the park with their families.
 
 * _Casual hikers_: This user started hiking for the pretty views, but doesn’t have any formal education on wildlife. They don’t want to spend money on expensive wildlife books, but they think it would be fun to identify wildflowers while on hikes and at parks and share their findings with their friends.
 
-* _The passionate beginner_: This user may have taken Biology (or Horticulture or something similar) in the past, so they are fairly confident in their ability to read scientific texts. They know a little bit about plants from school, and it was very interesting to them so they want to continue learning even though school is over. They’ve been using smartphones for years, and would consider themselves tech-savvy when it comes to using their phones. They would like to gain experience in examining and identifying plants at local parks, and also start a log of wildflowers they’ve found and learned about.
+* _The passionate beginner_: This user took a Biology (or Horticulture or something similar) class in the past, so they feel comfortable reading scientific texts though they don't have a lot of hands-on experience with wildlife. They enjoyed the small bit of formal education they received on the subject, so they want to continue learning even though school is over. They’ve been using smartphones for years, and would consider themselves very competent when it comes to using their phones. They would like to gain experience in examining and identifying plants at local parks, and also start a log of wildflowers they’ve found and learned about.
 
-* _Elderly folk_: This user likes to go to the park to get some fresh air and admire the plants. They do not have any formal education or training on wildlife examination or identification. They own a smartphone, but they aren’t that well-versed with technology. They might not be able to see that well. They might have limited mobility with their hands, so they might not like flipping pages or writing things down. As a hobby, they would like to learn the names of plants and a few fun facts about them, as well as keep a log of what they’ve found to show their children and grandchildren.
+* _Elderly folk_: This user likes to go to the park to get some fresh air and admire the plants. They do not have any formal education or training on wildlife examination or identification. They own a smartphone, but they aren’t that well-versed with technology. They might not be able to see very well. They might have limited mobility with their hands, so it may be painful or uncomfortable to be constantly flipping pages or writing things down. As a hobby, they would like to learn the names of plants and a few fun facts about them, as well as keep a log of what they’ve found to show their children and grandchildren.
 
-* _Nature enthusiasts_: This user has spent years using books for plant identification, so they have a lot of experience in examining wildlife. They may even be a part of local nature groups. Their biggest complaint about guide books is that they become outdated, and it would be easier if there was an electronic resource that could be updated as new information becomes available (instead of buying a new edition of a book every few years). They keep a journal of the species they’ve found, and they would like a way to store/view these statistics digitally.
+* _Nature enthusiasts_: This user has spent years using books for plant identification, so they have a lot of experience in examining wildlife. Their passion for learning about wildlife is very strong, and they have more knowledge than a casual hiker or park-goer. They participate in local nature groups. Their biggest complaint about guide books is that they become outdated, and it would be easier if there was an electronic resource that could be updated as new information becomes available (instead of buying a new edition of a book every few years). They keep a journal of the species they’ve found, and they would like a way to store/view these statistics digitally.
  
  
 Stakeholders
-* _Nature experts_: They are concerned about the accuracy of information (i.e. they don’t want false information to be spread in an educational context). These stakeholders have a lot of in-depth knowledge about wildflowers, including some formal education on nature, wildlife, etc. They would be well-versed in plant identification, and have likely done a lot of examinations of wildflowers (and other plants) locally as well as abroad. They are happy that people want to learn more about plants, but they want the resources to be as accurate as possible.
+* _Nature experts_: They are concerned about the accuracy of information (i.e. they don’t want false information to be spread in an educational context). These stakeholders have a lot of in-depth knowledge about wildflowers, including some formal education on nature, wildlife, etc. They are well-versed in plant identification, and have likely done a lot of examinations of wildflowers (and other plants) locally as well as abroad. They are happy that people want to learn more about plants, but they want the resources to be as accurate as possible.
 
 * _Environmentalists_: They want to ensure that the techniques used for wildflower identification are not harmful to the plants. Like nature experts, these stakeholders have formal education in the field. They have extensive knowledge on the conditions needed to protect and foster the growth of various species of plants. They stress the importance of hikers and park-goers being respectful of their surroundings.
 
