Updated grammar and phrasing in the interview
Updated the interview section, also added some reflections about the interview. Changed the order of the reflections so that it matches the order they appear in in the research section.

--- a/p1.md
+++ b/p1.md
@@ -73,13 +73,13 @@ _Justification_: Since a potential user of our system is interested in wildflowe
  
 _Method description_: We interviewed Alyssa and Wesley, a couple in their twenties who are passionate about nature, specifically plants. They love going for walks and hikes. Aside from one semester of Horticulture class in high school, neither of them has any formal education about wildflowers or plants in general; however, they own several books on flowers and other plants that they use to teach themselves for fun. They currently don’t use any wildlife apps. We felt that it would be helpful to interview them to gain insight from people who are interested in plants (specifically, plant identification) without having an academic background on the subject. We interviewed them in their home. I recorded the audio from the interview so that I would not have to write down responses word-for-word. I only made quick handwritten notes to refer to insights that I thought were the most significant, so that I would know what to listen for when I played back the audio later.
  
-_Major findings_: Many plants look similar but are very different in other less visible characteristics, so relying on visual characteristics alone is not always the best when it comes to identifying a plant. Feeling, smelling, and sometimes tasting the plant can also provide valuable information that can be used for identification. Alyssa also noted that many guides only provide one image of the flower, when it might also be helpful to be able to examine magnified images of the leaves, petals, or stems. Wesley also added that a flower may look different depending on its current stage in life, so perhaps including images of its various life stages might be helpful (since people do not always come across a flower when it is in full bloom).
+_Major findings_: Many plants look similar but are very different in other less visible characteristics, so relying on visual characteristics alone is not always the best when it comes to identifying a plant. Feeling, smelling, and sometimes tasting the plant can also provide valuable information that can be used for identification. One critique Alyssa had about field guides is that many of them only provide one image of the flower. She said it is beneficial to be able to examine additional images of magnified leaves, petals, or stems. Wesley also added that a flower may look different depending on its current stage in life, so including images of its various life stages would be helpful (since people will not always come across the flower when it is in full bloom).
  
-Guides also vary widely in the way that plants are organized. One of Alyssa’s favourite books on plant identification had the plants organized in alphabetical order; another book that she liked had the plants organized by categories such as “medicinal.” She noted that alphabetical order is nice when she already knows what she’s looking for and just wants to learn more about it. Otherwise, she usually flips through the pages and looks at pictures/reads descriptions until finding something that seems right.
+Guides also vary widely in the way that plants are organized. One of Alyssa’s favourite books on plant identification had the plants organized in alphabetical order; another book that she liked had the plants organized by categories such as “medicinal.” She noted that alphabetical order is nice when she already knows what she’s looking for and just wants to learn more about it. Otherwise, she usually flips through the pages and looks at pictures/reads descriptions until finding something that seems correct.
  
-When asked what she might type into a Google search on her phone if she was outside and wanted to identify a flower, and she mentioned that a lot of people don’t exactly know what words to use to describe what they mean in the first place. Leaving users to come up with descriptive words on their own might lead them to struggle with inefficient searches. She said it would be nice if there was a way to apply filters that narrow down the possibilities (like when online shopping), so that users don’t have to worry as much about finding the right words to use since they would already be provided. One problem she also mentioned with using online searches is that the user might not think to include their location in the search, or the search engine might not take location into consideration when displaying results. She said that a lot of plants may look very similar but grow in very different parts of the world. People doing searches might come to incorrect conclusions when they find a plant online that looks a lot like the one in front of them, without realizing that it can’t be the correct one since it actually does not grow anywhere near the person’s current location.
+When asked what she might type into a Google search on her phone if she was outside and wanted to identify a flower, Alyssa said it is hard to identify a plant that way because a lot of people don’t exactly know what words to use to describe what they mean in the first place (or they use words that are too broad). She said it would be nice if there was a way to apply filters that narrow down the possibilities (like when online shopping), so that users don’t have to worry as much about finding the right words to use since they would already be provided. One problem she also mentioned with using online searches is that the user might not think to include their location in the search, or the search engine might not take location into consideration when displaying results. She said that a lot of plants may look very similar but grow in very different parts of the world. People doing searches might come to incorrect conclusions when they find a plant online that looks a lot like the one in front of them, without realizing that it can’t be the correct one since it actually does not grow anywhere near the person’s current location.
  
-Alyssa also noted that guidebooks sometimes use language that is too complex. Wildlife authors with PhDs in the subject, for instance, may not realize that language that makes perfect sense to them may not be as clear to people who don’t have the same vocabulary and breadth of knowledge. For people without an academic background who interact with nature as a hobby, it can be difficult to find resources that contain accessible language.
+Alyssa also noted that guidebooks sometimes use language that is too complex. Wildlife authors with PhDs in the subject, for instance, may not realize that language that makes perfect sense to them may not be as clear to people who don’t have the same vocabulary and breadth of knowledge. For people without an academic background who interact with nature as a hobby, it can be difficult to find resources that contain accessible language. While Alyssa likes books that are packed with information, she acknowleged that if the pages are too dense with text without a good balance of images, the book can be a tedious read. In terms of what kinds of information are most interesting to learn about a plant, Alyssa and Wesley both said that any special uses (like healing a wound), and whether or not it is edible are the kind of facts that intrigue them the most.
 
 
  
@@ -193,11 +193,11 @@ It was very interesting to see that the potential users identified a lot more is
 
 ### Reflections on User Research
 
-_Extreme User Interviews:_ Using the Extreme User Interviews Research Method was very helpful in getting a lot of feedback about what user’s like, don’t like and what they would like to see differently in a wildflower app. Even with only two people interviewed, a lot of information was collected which will give us insight into designing the app. I believe having more time to contact different users would have been beneficial in collecting a wider range of likes and dislikes. Also, having multiple apps that the potential users could try would allow for more feedback in relation to different designs and have users find more key issues using different systems. It was easy to have the user explore the system in order to find issues and then evaluate their experience using it. I think the users were more critical of the system than they would have been if they didn’t know I was going to be asking about their experience with it. Also, since they knew we did not create the app, they were more willing to share their negative experiences with the wildflower app. If I had to do this research method again, I would like to give the potential users more time to use the app, so that they would not feel rushed and could have more time to give feedback.
-
 _Secondary Research - Customer Reviews Data Mining:_ Given our lack of time, mining customer reviews was a great resource. We were able to get a large quantity of data about what users actually thought about a product. We were able to see that the identification/searching feature and ease of use were among the most important to the users. We learned different reasons and ways the apps were used. However, we were only able to look at a fraction of the available apps, qualitatively. Many reviews did not contain meaningful information, and a large number of users only rated the app. With more time and data mining algorithms, we could have had a much larger data set, and analyzed the data quantitatively as well, giving us a more accurate sense of how users feel about the current apps.
 
-_Interview_: Recording the interview while only writing a few words helped the interview feel less formal and more conversational. Since we interviewed them in their home, they were able to pull books off their bookshelf and show them to me to illustrate what they were talking about, or to provide clarification when I had follow-up questions. They were able to provide a lot of insight to things we would never have thought of on our own (such as the fact that plants look different at different stages of its life). While it was comfortable and convenient to interview them in their home, the interview could have been improved if we could also have accompanied them to a park afterwards, so we could have seen how they approached their examination of flowers or other plants.
+_Interview_: Recording the interview while only writing a few words helped the interview feel more conversational and less formal, since we didn't have to wait for answers to be written down before continuing. Since we interviewed them in their home, they were able to pull books off their bookshelf and show what they were talking about, or to provide clarification when we had follow-up questions. They were able to provide a lot of insight to things we would have never thought of on our own (such as the fact that plants look different at different stages of its life). While it was comfortable and convenient to interview them in their home, the interview could have been improved if we had also accompanied them to a park afterwards, so we could have observed how they approached their examination of flowers or other plants. If we had done that in addition to the basic verbal interview, we might have been able to catch additional insights, preferences, or steps that they hadn't mentioned during the interview (since their answers had been based on recollection).
+
+_Extreme User Interviews:_ Using the Extreme User Interviews Research Method was very helpful in getting a lot of feedback about what user’s like, don’t like and what they would like to see differently in a wildflower app. Even with only two people interviewed, a lot of information was collected which will give us insight into designing the app. I believe having more time to contact different users would have been beneficial in collecting a wider range of likes and dislikes. Also, having multiple apps that the potential users could try would allow for more feedback in relation to different designs and have users find more key issues using different systems. It was easy to have the user explore the system in order to find issues and then evaluate their experience using it. I think the users were more critical of the system than they would have been if they didn’t know I was going to be asking about their experience with it. Also, since they knew we did not create the app, they were more willing to share their negative experiences with the wildflower app. If I had to do this research method again, I would like to give the potential users more time to use the app, so that they would not feel rushed and could have more time to give feedback.
 
 ## Task Descriptions
 
