--- a/p1.md
+++ b/p1.md
@@ -161,7 +161,7 @@ _Wish List for a new wildflower app:_
 __Interviewee #2:__
 
 Lorraine, Senior, Amateur User. Enjoys being outdoors and learning more about her surroundings. Uses field guides in book format at home to identify birds. Not tech savvy.
-
+ 
 Grade the interviewee gave the app they tested: 7/10
 
 _What Worked:_
@@ -202,7 +202,7 @@ _Wish List for a new wildflower app:_
 * Individuals to contact to get more info
   
 
-It was very interesting to see that the potential users identified a lot more issues and items they would like to see instead of what they actually liked about the system. We think that goes to show that when a design is good, people tend not to notice. But if the design is bad or missing items, it tends to stick out to users and hurt the overall experience. So determining things that didn’t work out is similar apps plays very important role in developing a better user-friendly app.  Being critical is very efficient in learning how to develop a better app. A list of items that were left out of similar apps is also helpful in designing our app.
+It was very interesting to see that the potential users identified a lot more issues and items they would like to see instead of what they actually liked about the system. We think that goes to show that when a design is good, people tend not to notice. But if the design is bad or missing items, it tends to stick out to users and hurt the overall experience. So determining things that didn’t work out in similar apps plays very important role in developing a better user-friendly app.  Being critical is very efficient in learning how to develop a better app. A list of items that were left out of similar apps is also helpful in designing our app as it shows what the users are wanting to be able to complete with the app. 
 
 ### Reflections on User Research
 
