--- a/p2.md
+++ b/p2.md
@@ -42,7 +42,11 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
-![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png)
+![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png "Close up 1: Photo Storage")
+_Close up 1: Photo Storage_
+
+We found that many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. For our idea, we chose a grid layout as it allows for more items displayed at a time on the screen. Each item represents a photo taken of a flower sighting. The photos can be sorted by date found or by name.  The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page. It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo.  
+
 ![](http://lorempixel.com/550/450 "Close up 2")
 ![](http://lorempixel.com/550/450 "Close up 3")
 
