--- a/p2.md
+++ b/p2.md
@@ -45,7 +45,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 ![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png "Close up 1: Photo Storage")
 _Close up 1: Photo Storage_
 
-We found that many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. For our idea, we chose a grid layout as it allows for more items displayed at a time on the screen. Each item represents a photo taken of a flower sighting. The photos can be sorted by date found or by name.  The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page. It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo.  
+We found that many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. For our idea, we chose a grid layout as it allows for more items displayed at a time on the screen. Each item represents a photo taken of a flower sighting. The photos can be sorted by date found or by name.  The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page (not shown). It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo. The photos can be saved onto the phone's storage or shared on social media. 
 
 ![](http://lorempixel.com/550/450 "Close up 2")
 ![](http://lorempixel.com/550/450 "Close up 3")
