Updated description write up

--- a/p2.md
+++ b/p2.md
@@ -10,7 +10,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Storyboard
 
-
 ![](https://kowther.github.io/FieldGuide-481/storyboard.jpg)
 
 __KOWTHER__
@@ -23,14 +22,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Brainstorm and Affinity Diagram
 
-
 __Brainstorming Session__: Each group member came up with 7-8 sketches of various aspects of the system. The following are scans of each group member's brainstorming sketches (1 page per group member).
 
 * [Page 1](https://kowther.github.io/FieldGuide-481/brainstorm_01.jpg)
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
-![](http://lorempixel.com/1024/768 "Image of Affinity Diagram")
+![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
 
 __STEPHANIE__
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
@@ -43,7 +41,7 @@ We found that many of the current apps do not have the option of taking and stor
 ![](https://kowther.github.io/FieldGuide-481/descriptionannotationv2.png "Close up 2: Description Page")
 _Close up 2: Description Page_
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+Based on our research done in P1 we found that potential users of a field guide app would like a description page that is oranginzed and not very cluttered. For this reason we decided that the most important information like the name of the flower should be available to the user right as they access the description page. Other more detailed information should be easily accessible by the user if they wish to learn more about the flower. This includes the full description, any interesting information about it and access to the map which shows the users locations of where to find the flower based on other users sightings and their own. In our research we discovered that some users are not interested in all of the facts about the flower and are just interested in knowing what it is, where to find it and the interesting facts about it, while other would like the more detailed description. In designing this page we decided that drop down menus would allow users to be able to acces the information if they wanted to and if not then it wouldn't be distracting to them. Also, we decided under the main image that the user should be able to swipe through the images again to keep the page organized and easily usable. 
 
 ![](https://kowther.github.io/FieldGuide-481/annotate_recognition.png "Close up 3: Recognition Page")
 _Close up 3: Recognition Page_
