Updated recognition annotation

--- a/p2.md
+++ b/p2.md
@@ -46,7 +46,7 @@ Based on our research done in P1 we found that potential users of a field guide 
 ![](https://kowther.github.io/FieldGuide-481/annotate_recognition.png "Close up 3: Recognition Page")
 _Close up 3: Recognition Page_
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+This is the screen that the user sees when they want to identify their wildflower using image recognition. If they want to use their camera to take a new photo, a distinct box indicates the frame in which the user should position their view of the flower before pressing the ready button. Users also have the option to go to their Gallery/Camera Roll to use an image that they took before.
 
 ## Reflection
 
