added storyboard description

--- a/p2.md
+++ b/p2.md
@@ -12,8 +12,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ![](https://kowther.github.io/FieldGuide-481/storyboard.jpg)
 
-__KOWTHER__
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to ‘Start’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sighting of all users at that specific location. The ‘Learn more’ task (5-6) gives the user a detailed description/interesting facts about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a couple more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). 
 
 ## Task-Centered System Walkthrough
 
