--- a/p2.md
+++ b/p2.md
@@ -6,7 +6,7 @@
 
 [YouTube Video](http://www.youtube.com/watch?v=RMINSD7MmT4)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+For our video prototype we decided to make a powerpoint video that showcases how the system can be used in order to identify a wildflower and then pin it to a map, view it's description and save it to a wildflower journal. The video starts with the user taking a photo of the wildflower they would like to identify and then goes through the analyzing phase in order to find a match. Once a match is found the user is then able to pick one of 4 options, pining the wildflower to a map for others to view where the wildflower was sighted, adding the wildflower to their my flowers journal, viewing it's description and interesting facts, and or just going back to the home screen. On each options page there are other steps the user may take. If the users chooses the pin to map option then the user can pin their flower on the map and then click on the image of their sighting in order to view sightings from other users of the same flower. If the user decides to learn more about the wildflower then they are taken to a page that includes the wildflowers common name and family name, it's rarity and whether it is edible. The page contains three drop down menus that the user can click on as well that contain a full description of the flower, any interesting facts about it and a map of where it can be found. If the user decides to add the flower to their my wildflowers journal then the image of the flower will show up at the end of the list. Cliking on it brings up information that the user can add/edit that is relevant to it. Additional pictures can be viewed here as well. Lastly if the user is done they can simply press the home button to start the process all over again. 
 
 ## Storyboard
 
